--- a/index.html
+++ b/index.html
@@ -18,79 +18,153 @@
             <button class="nav-logo" id="nav-logo"><img src="assets/menu.svg" alt="Open navigation menu"></button>
         </div>
 
+        <nav class="desktop-menu" id="desktop-menu">
+            <ul class="nav-links">
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Resources</h2>
+                        <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    </button>
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></li>
+                        <li class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></li>
+                        <li class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></li>
+                        <li class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes
+                                and collectives</a></li>
+                        <li class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></li>
+                        <li class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
+                        </li>
+                        <li class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></li>
+                        <li class="dropdown-item"><a href="health.html"
+                                aria-label="Physios and flexibility resources">Physio and flexy</a></li>
+                        <li class="dropdown-item"><a href="photography.html"
+                                aria-label="Photographers and videographers">Photography and video</a></li>
+                        <li class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other
+                                resources</a></li>
+                        <li class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Brands</h2>
+                        <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    </button>
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
+                        </li>
+                        <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></li>
+                        <li class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Skills</h2>
+                        <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    </button>
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></li>
+                        <li class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></li>
+                        <li class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></li>
+                        <li class="dropdown-item"><a href="hammock.html"
+                                aria-label="Hammock or sling skills">Hammock/sling</a></li>
+                        <li class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></li>
+                        <li class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps +
+                                rope</a></li>
+                        <li class="dropdown-item"><a href="otherskills.html"
+                                aria-label="Specialty aerial skills">Specialty</a></li>
+                        <li class="dropdown-item"><a href="allskills.html"
+                                aria-label="See all aerial and pole skills">See all</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a>
+                    </h2>
+                </li>
+                <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
+                <div class="search-items">
+                    <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
+                </div>
+            </ul>
+            <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+        </nav>
+
         <!-- mobile menu -->
 
         <nav class="mobile-menu" id="mobile-menu">
             <button class="closing-x" id="closing-x"><img src="assets/close.svg" alt="Close the menu"></button>
-            <div class="nav-links">
-                <div class="nav-item-div">
+            <ul class="nav-links">
+                <li class="nav-item-div">
                     <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
-                </div>
-                <div class="nav-item-div">
+                </li>
+                <li class="nav-item-div">
                     <button class="nav-item" id="nav-item">
                         <h2>Resources</h2>
                     </button>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-                    <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></p>
-                        <p class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></p>
-                        <p class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></p>
-                        <p class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes
-                                and collectives</a></p>
-                        <p class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></p>
-                        <p class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
-                        </p>
-                        <p class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></p>
-                        <p class="dropdown-item"><a href="health.html"
-                                aria-label="Physios and flexibility resources">Physio and flexy</a></p>
-                        <p class="dropdown-item"><a href="photography.html"
-                                aria-label="Photographers and videographers">Photography and video</a></p>
-                        <p class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other
-                                resources</a></p>
-                        <p class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a>
-                        </p>
-                    </div>
-                </div>
-                <div class="nav-item-div">
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></li>
+                        <li class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></li>
+                        <li class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></li>
+                        <li class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes
+                                and collectives</a></li>
+                        <li class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></li>
+                        <li class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
+                        </li>
+                        <li class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></li>
+                        <li class="dropdown-item"><a href="health.html"
+                                aria-label="Physios and flexibility resources">Physio and flexy</a></li>
+                        <li class="dropdown-item"><a href="photography.html"
+                                aria-label="Photographers and videographers">Photography and video</a></li>
+                        <li class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other
+                                resources</a></li>
+                        <li class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
                     <button class="nav-item" id="nav-item">
-                        <h2>Shops</h2>
+                        <h2>Brands</h2>
                     </button>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-                    <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
-                        </p>
-                        <p class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></p>
-                        <p class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></p>
-                    </div>
-                </div>
-                <div class="nav-item-div">
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
+                        </li>
+                        <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></li>
+                        <li class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
                     <button class="nav-item" id="nav-item">
                         <h2>Skills</h2>
                     </button>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-                    <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></p>
-                        <p class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></p>
-                        <p class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></p>
-                        <p class="dropdown-item"><a href="hammock.html"
-                                aria-label="Hammock or sling skills">Hammock/sling</a></p>
-                        <p class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></p>
-                        <p class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps +
-                                rope</a></p>
-                        <p class="dropdown-item"><a href="otherskills.html"
-                                aria-label="Specialty aerial skills">Specialty</a></p>
-                        <p class="dropdown-item"><a href="allskills.html"
-                                aria-label="See all aerial and pole skills">See all</a></p>
-                    </div>
-                </div>
-                <div class="nav-item-div">
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></li>
+                        <li class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></li>
+                        <li class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></li>
+                        <li class="dropdown-item"><a href="hammock.html"
+                                aria-label="Hammock or sling skills">Hammock/sling</a></li>
+                        <li class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></li>
+                        <li class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps +
+                                rope</a></li>
+                        <li class="dropdown-item"><a href="otherskills.html"
+                                aria-label="Specialty aerial skills">Specialty</a></li>
+                        <li class="dropdown-item"><a href="allskills.html"
+                                aria-label="See all aerial and pole skills">See all</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
                     <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a>
                     </h2>
-                </div>
-                <div class="nav-item-div">
+                </li>
+                <li class="nav-item-div">
                     <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
-                </div>
-            </div>
+                </li>
+            </ul>
             <div class="nav-input">
                 <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
                 <div class="search-items">
